--- a/index.html
+++ b/index.html
@@ -82,7 +82,16 @@
 		</div>
 		<div id="rules" class="mfp-hide mfp-fade">
 			<h1>Rules</h1>
-			<p>Hui Hui Hui Hui Hui Hui Hui Hui</p>
+			<p>
+				<b>THE PACK</b> <br>
+				The standard 52-card pack is used.
+				<br><br>
+				<b>OBJECT OF THE GAME</b>
+				<br>
+				Each participant attempts to beat the dealer by getting a count as close to 21 as possible, without going over 21. <br><br>
+				<b>CARD VALUES/SCORING</b><br>
+				Face cards are 10, Ace is 11 and any other card is its pip value.
+			</p>
 		</div>
 		<div id="contact" class="mfp-hide mfp-fade">
 			<h1>Contact us</h1>
