--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<div  class="wrapper">
 		<img src="img/fg-border-max.png" class="table" alt="">
 		<img src="img/border.png" class="border_table" alt="">
+		<img src="img/logo.png" alt="" class="logo">
 		<div class="dealer">
 			<div class="cards">
 				<div class="card"></div>
