--- a/en.html
+++ b/en.html
@@ -85,17 +85,18 @@
 		<div id="rules" class="mfp-hide mfp-fade">
 			<h1>Rules</h1>
 			<p>
-				<b>THE PACK</b> <br>
-				The standard 52-card pack is used.
-				<br><br>
-				<b>OBJECT OF THE GAME</b>
-				<br>
-				Each participant attempts to beat the dealer by getting a count as close to 21 as possible, without going over 21. <br><br>
-				<b>CARD VALUES/SCORING</b><br>
-				Face cards are 10, Ace is 11 and any other card is its pip value.
-				<br><br>
-				<b>Double down</b>
-				The player is allowed to increase the initial bet by up to 100% in exchange for committing to stand after receiving exactly one more card.
+Blackjack is played with one standard 52-card decks, with each denomination assigned a point value. The cards 2 through 10 are worth their face value. Kings, queens, and jacks are each worth 10, and aces may be used as either 11. The object for the player is to draw cards totaling closer to 21, without going over, than the dealer's cards.
+<br>
+Hit: If you hit, you take another card or cards in hopes of getting closer to 21. If the player's total exceeds 21 after hitting, the player is said to "bust" and loses the bet.
+<br>
+Double down: You may elect to double your original bet and receive only one more card regardless of its denomination. 
+<br>
+Stand: If you stand, you elect to draw no more cards in hopes that the current total will beat the dealer.
+<br>
+Аfter you have chosen a stand or a double down, you end up choosing cards and the dealer starts doing it.
+If your points are equal then it will be a draw.
+If your points are more than a dealer but less than 22 then you won.
+If your points and the dealer's points are more than 22 then this is a draw
 			</p>
 		</div>
 		<div id="contact" class="mfp-hide mfp-fade">
