--- a/index.html
+++ b/index.html
@@ -85,16 +85,18 @@
 		<div id="rules" class="mfp-hide mfp-fade">
 			<h1>规则</h1>
 			<p>
-				<b>包裹</b> <br>
-				使用标准的52卡包。
-				<br><br>
-				<b>游戏的目标</b>
-				<br>
-				每位参与者都试图通过尽可能接近21的计数来击败经销商，而不会超过21<br><br>
-				<b>卡片价值/评分</b><br>
-				面牌是10，Ace是11，其他牌是它的点值 <br><br>
-				<b>双击</b>
-				玩家被允许增加最初的赌注高达100％，以换取承诺在收到正好一张卡之后的立场
+				二十一点是用一个标准的52张卡组播放的，每个面额分配一个分值。牌2到10都值得他们的面值。国王，王后和千斤顶每个都值10，而ace可以被用作11.玩家的目标是将牌总数接近21，而不会超过庄家的牌。
+<br>
+点击：如果你击中了，你拿另外一张或多张牌，希望接近21点。如果击球后球员总数超过了21点，那么该球员会被说成是“破灭”并失去了赌注。
+<br>
+双击：您可以选择将原始赌注加倍，并且无论其面额如何，都只能再获得一张卡片。
+<br>
+站：如果你站立，你选择不再画卡片，希望目前的总数能击败经销商。
+<br>
+当你选择了一个摊位或一个双打之后，你最终选择卡牌，经销商开始这样做。
+如果你的观点相同，那么这将是平局。
+如果你的积分比经销商多，但是不到22，那么你就赢了。
+如果你的积分和经销商的积分超过22，那么这是平局
 			</p>
 		</div>
 		<div id="contact" class="mfp-hide mfp-fade">
