--- a/en.html
+++ b/en.html
@@ -81,6 +81,7 @@
 			<a href="index.html" style="color: red">中国</a>
 			<a href="#contact" class="popup">Contact us</a>
 			<a href="#rules" class="popup">Rules</a>
+			<a href="#video" class="popup">Video guide</a>			
 		</div>
 		<div id="rules" class="mfp-hide mfp-fade">
 			<h1>Rules</h1>
@@ -97,11 +98,15 @@ Stand: If you stand, you elect to draw no more cards in hopes that the current t
 If your points are equal then it will be a draw.
 If your points are more than a dealer but less than 22 then you won.
 If your points and the dealer's points are more than 22 then this is a draw
-			</p>
+			</p>			
 		</div>
 		<div id="contact" class="mfp-hide mfp-fade">
 			<h1>Contact us</h1>
 			<a href="mailto:alexdarkstalkeroriginal@gmail.com">alexdarkstalkeroriginal@gmail.com</a>
+		</div>
+		<div id="video" class="mfp-hide mfp-fade">
+			<h1>Video guide</h1>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/mkyEKhNUe6Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 	</div>
 		
