--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
 			<a href="en.html" style="color: red">EN</a>
 			<a href="#contact" class="popup">联系我们</a>
 			<a href="#rules" class="popup">规则</a>
+			<a href="#video" class="popup">视频指南</a>
+		</div>
+		<div id="video" class="mfp-hide mfp-fade">
+			<h1>视频指南</h1>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/mkyEKhNUe6Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 		<div id="rules" class="mfp-hide mfp-fade">
 			<h1>规则</h1>
